kubernetes/iot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iot
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: secretpassword
        image: postgres:12
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: influx
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influx
  template:
    metadata:
      labels:
        app: influx
    spec:
      containers:
      - image: influxdb:1.8.0
        name: main
        ports:
        - containerPort: 8086
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influx-storage
  volumeClaimTemplates:
  - metadata:
      name: influx-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: iot
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-external
  namespace: iot
spec:
  ports:
  - port: 31234
    nodePort: 31234
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: iot
spec:
  ports:
  - port: 8086
    protocol: TCP
    targetPort: 8086
  selector:
    app: influx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: huawei-solar
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: huawei-solar
  template:
    metadata:
      labels:
        app: huawei-solar
    spec:
      containers:
      - args:
        - python3 main.py --fusionsolar-user ${FUSIONSOLAR_USER} --fusionsolar-password
          ${FUSIONSOLAR_PASSWORD} --pvoutput-api-key ${PVOUTPUT_API_KEY} --pvoutput-system-id
          ${PVOUTPUT_SYSTEM_ID} --postgres-url ${PSQL_URI}
          --influxdb-url http://influxdb:8086 --fusionsolar-region eu5
        command:
        - sh
        - -c
        image: ghcr.io/szczeles/toolbelt/huawei-solar:0.30
        name: main
      imagePullSecrets:
      - name: ghreg
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mosquitto
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  volumeClaimTemplates:
  - metadata:
      name: mosquitto-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - image: eclipse-mosquitto:1.6.7
        name: eclipse-mosquitto
        ports:
        - containerPort: 1884
          name: mqtt
          protocol: TCP
        - containerPort: 1883
          name: mqtts
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 15
          successThreshold: 1
          tcpSocket:
            port: 1884
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 1884
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /mosquitto/config/mosquitto.conf
          name: mosquitto-conf
          readOnly: true
          subPath: mosquitto.conf
        - mountPath: /mosquitto/config/certs/ca.crt
          name: mosquitto-conf
          readOnly: true
          subPath: ca.crt
        - mountPath: /mosquitto/config/tls
          name: mosquitto-certs
          readOnly: true
        - mountPath: /mosquitto/data
          name: mosquitto-data
      volumes:
      - name: mosquitto-conf
        configMap:
          name: mosquitto
      - name: mosquitto-certs
        secret:
          secretName: mosquitto
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-external
  namespace: iot
spec:
  type: NodePort
  ports:
  - name: mqtts
    nodePort: 30505
    port: 1883
    protocol: TCP
    targetPort: mqtts
  selector:
    app: mosquitto
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-internal
  namespace: iot
spec:
  ports:
  - name: mqtt
    port: 1884
    protocol: TCP
    targetPort: mqtt
  selector:
    app: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt2influx
  namespace: iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt2influx
  template:
    metadata:
      labels:
        app: mqtt2influx
    spec:
      containers:
      - name: main
        image: localhost/mqtt2influx:0.4
